--- a/RazorPagesGeneral/RazorPagesGeneral.csproj
+++ b/RazorPagesGeneral/RazorPagesGeneral.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\RazorPagesLessons.Services\RazorPagesLessons.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
